--- a/workspace-setup.adoc
+++ b/workspace-setup.adoc
@@ -39,7 +39,13 @@ Create the docker image
 ----
 	docker build docker/
 	docker images
-	docker tag <IMAGE_ID> rest1:v.0.1
-	
+	docker tag <IMAGE_ID> rest1:v.0.1	
+----
+
+Create resurces in kubernetes
+
+----
+	kubectl apply -f ..\k8s\
+----
 	
 	
