--- a/workspace-setup.adoc
+++ b/workspace-setup.adoc
@@ -260,3 +260,82 @@ Events:
   Normal  ScalingReplicaSet  2m                deployment-controller  Scaled up replica set rest1-7d5c88fc97 to 2
   Normal  ScalingReplicaSet  2m                deployment-controller  Scaled down replica set rest1-84cc5b858 to 0
 ----
+
+We can also rollback to the previous version
+
+-----
+	kubectl rollout history deployment/rest1
+	kubectl rollout history deployment/rest1 --revision=1
+	kubectl rollout undo deployment/rest1
+	
+	kubectl describe deployment
+	
+Name:                   rest1
+Namespace:              default
+CreationTimestamp:      Tue, 14 Nov 2017 14:22:02 +0200
+Labels:                 app=rest1
+Annotations:            deployment.kubernetes.io/revision=3
+                        kubectl.kubernetes.io/last-applied-configuration={"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotation
+s":{},"name":"rest1","namespace":"default"},"spec":{"replicas":1,"templat...
+Selector:               app=rest1
+Replicas:               2 desired | 2 updated | 2 total | 2 available | 0 unavailable
+StrategyType:           RollingUpdate
+MinReadySeconds:        0
+RollingUpdateStrategy:  1 max unavailable, 1 max surge
+Pod Template:
+  Labels:  app=rest1
+  Containers:
+   rest1-app:
+    Image:  rest1:v.0.1
+    Port:   8080/TCP
+    Limits:
+      cpu:     1
+      memory:  512Mi
+    Requests:
+      cpu:      500m
+      memory:   256Mi
+    Liveness:   http-get http://:web/health delay=180s timeout=1s period=10s #success=1 #failure=3
+    Readiness:  http-get http://:web/info delay=0s timeout=1s period=10s #success=1 #failure=3
+    Environment:
+      SPRING_PROFILES_ACTIVE:  prod
+      JAVA_TOOL_OPTIONS:        -Xmx512m -Xms256m
+    Mounts:                    <none>
+  Volumes:                     <none>
+Conditions:
+  Type           Status  Reason
+  ----           ------  ------
+  Available      True    MinimumReplicasAvailable
+OldReplicaSets:  <none>
+NewReplicaSet:   rest1-84cc5b858 (2/2 replicas created)
+Events:
+  Type    Reason              Age                From                   Message
+  ----    ------              ----               ----                   -------
+  Normal  ScalingReplicaSet   10m (x2 over 36m)  deployment-controller  Scaled down replica set rest1-84cc5b858 to 1
+  Normal  ScalingReplicaSet   10m                deployment-controller  Scaled up replica set rest1-7d5c88fc97 to 1
+  Normal  ScalingReplicaSet   10m                deployment-controller  Scaled up replica set rest1-7d5c88fc97 to 2
+  Normal  ScalingReplicaSet   10m                deployment-controller  Scaled down replica set rest1-84cc5b858 to 0
+  Normal  ScalingReplicaSet   49s (x2 over 28m)  deployment-controller  Scaled up replica set rest1-84cc5b858 to 2
+  Normal  DeploymentRollback  49s                deployment-controller  Rolled back deployment "rest1" to revision 1
+  Normal  ScalingReplicaSet   49s                deployment-controller  Scaled up replica set rest1-84cc5b858 to 1
+  Normal  ScalingReplicaSet   49s                deployment-controller  Scaled down replica set rest1-7d5c88fc97 to 1
+  Normal  ScalingReplicaSet   21s                deployment-controller  Scaled down replica set rest1-7d5c88fc97 to 0
+  
+  
+	kubectl rollout undo deployment/rest1 --to-revision=2
+
+----
+
+Scaling deployment
+
+----
+	kubectl scale deployment rest1 --replicas=5
+deployment "rest1" scaled
+
+	kubectl autoscale deployment rest1 --min=10 --max=15 --cpu-percent=80
+	
+	kubectl get hpa
+	
+NAME      REFERENCE          TARGETS           MINPODS   MAXPODS   REPLICAS   AGE
+rest1     Deployment/rest1   <unknown> / 80%   10        15        10         1m
+----
+
